# waiwai

./: .env.example  Makefile  README.md  docker-compose.yml
Docker/python/: Dockerfile
Docker/storybook/: Dockerfile
Docker/web/: Dockerfile
api/: .cspell.json  data.db  database.py  main.py  migrate_db.py  models.py  pyproject.toml
api/src/: db.py  main.py  scemas.py  schemas.py
api/src/cruds/: teams.py
api/src/models/: item.py  schema.py
api/src/routers/: items.py
api/src/routes/: auth.py  category.py  product.py  product_category.py  team.py  user.py
api/src/schemas/: schemas.py
api2/: README.md
api2/src/models/: item.py  user.py
web/: .eslintignore  .eslintrc.js  .stylelintrc.js  README.md  package-lock.json  package.json  tsconfig.json
web/app/: .eslintrc.js  README.md  next.config.js  package-lock.json  package.json
web/src/components/Layout/: Layout.tsx
web/src/components/ui/Button/: Button.module.css  Button.tsx
web/src/components/ui/Logo/: Logo.module.css  Logo.tsx
web/src/locales/: _ja.ts
web/src/stories/: Button.stories.ts
web/src/styles/: destyle.css  globals.css  types.ts
